--- a/src/content/course.yaml
+++ b/src/content/course.yaml
@@ -3,4 +3,6 @@ structure:
   - title: English self-paced book
     path: /english-self-paced-book
   - title: A1
-    items: []
+    items:
+      - title: Definite/Indefinite Article
+        path: /a1/definite-indefinite-article
