--- a/src/content/course.yaml
+++ b/src/content/course.yaml
@@ -6,3 +6,5 @@ structure:
     items:
       - title: Definite/Indefinite Article
         path: /a1/definite-indefinite-article
+      - title: Tenses
+        path: /a1/tenses
