--- a/src/content/course.yaml
+++ b/src/content/course.yaml
@@ -10,3 +10,5 @@ structure:
         path: /a1/tenses
       - title: Word order
         path: /a1/word-order
+      - title: Present Simple
+        path: /a1/present-simple
